Cognitive distortion - bug fixes

--- a/src/app/main/games/games-list/common-game/identify-cognitive-distortion/idc-situation/idc-situation.component.scss
+++ b/src/app/main/games/games-list/common-game/identify-cognitive-distortion/idc-situation/idc-situation.component.scss
@@ -7,10 +7,12 @@
     display: flex;
     align-items: flex-start;
     justify-content: center;
-    padding-top: 1px;
-    padding-bottom: 1px;
+    //padding-top: 1px;
+    //padding-bottom: 1px;
     background-color: #F2FEFF;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0);
+  min-height: 46px;
+
 }
 
 .situation-content-heading{
